# pegasus-agent

./: .gitignore  LICENSE  README.md  install.sh  main.py  pegasus_memory.json  pyproject.toml  requiremenents.txt  requirements.txt  setup.py
.pegasus/: config.toml
.pegasus/mcp_servers/: event_booking_server.js  hackathon_manager_server.js  package-lock.json  start_demo_servers.sh
pegasus/: __init__.py
pegasus-webapp/: index.html  styles.css
pegasus/agent/: agent.py  persistence.py
pegasus/cli/: cli.py
pegasus/client/: __init__.py  llm_client.py  response.py
pegasus/config/: config.py  loader.py
pegasus/context/: compaction.py  data.py  manager.py
pegasus/mcp/: __init__.py  client.py  manager.py
pegasus/prompts/: environment.j2  system.py  tools.j2
pegasus/renderers/: tui.py
pegasus/runtime/: __inti__.py  agent.py  results.py
pegasus/sandbox/: __init__.py
pegasus/session/: session.py
pegasus/substrate/: __init__.py
pegasus/tools/: base.py  data.py  registry.py
pegasus/tools/builtin/: __init__.py  browser_use.py  editfile.py  mcp_executor.py  memory.py  readfile.py  shell.py  subagent.py  todos.py  vision_capture.py  websearch.py  writefile.py
pegasus/utils/: errors.py  images.py  logger.py  paths.py  text.py
src/agent/: agent.py  persistence.py  results.py
src/cli/: cli.py
src/client/: __init__.py  llm_client.py  response.py
src/config/: config.py  loader.py
src/context/: compaction.py  data.py  loop_detector.py  manager.py
src/hooks/: hooks_system.py
src/mcp/: __init__.py  client.py  manager.py
src/prompts/: identity.j2  memory.j2  operational.j2  security_guidelines.j2  system.py
src/renderers/: tui.py
src/security/: approvals.py
src/session/: session.py
src/skills/: __init__.py
src/tools/: base.py  data.py  discovery.py  registry.py  subagents.py
src/tools/builtin/: __init__.py  browser_use.py  editfile.py  glob.py  grep.py  listdir.py  mcp_executor.py  memory.py  patchfile.py  readfile.py  shell.py  subagent.py  todos.py  vision_capture.py  webfetch.py  websearch.py  writefile.py
src/tools/mcp/: client.py  manager.py  tool.py
src/utils/: images.py  paths.py  text.py
